src/tests/snapshots/hebi__tests__fn_call__func.snap
---
source: src/tests/fn_call.rs
expression: snapshot
---
# Input:
fn f():
  print "test"

f()
f()


# Result (success):
none

# Stdout:
test
test


