src/tests/snapshots/hebi__tests__fn_call__func_not_enough_args.snap
---
source: src/tests/fn_call.rs
expression: snapshot
---
# Modules:

            
# Input:
fn f(a, b, c):
  print a, b, c

f()


# Result (error):
missing required positional params: a, b, c

# Stdout:


