src/tests/snapshots/hebi__tests__fn_call__func_with_argv.snap
---
source: src/tests/fn_call.rs
expression: snapshot
---
# Modules:


# Input:
fn f(a, *rest):
  print a, rest

f(0)
f(0, 1, 2)


# Result (success):
none

# Stdout:
0 []
0 [1, 2]


